--- a/optimizations/Benchmarks/Benchmarks.csproj
+++ b/optimizations/Benchmarks/Benchmarks.csproj
@@ -8,6 +8,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="BenchmarkDotNet" Version="0.13.1" />
+		<PackageReference Include="System.Runtime" Version="4.3.1" />
 	</ItemGroup>
 
 </Project>
